feat: reworks Security creation/edition dto hierarchy
