# FinTrack.Application/Security/EntitiesBase/SecurityDetailsValidator.cs
@@ -1,63 +1,57 @@
-﻿using CheckDigits.Net;
+using CheckDigits.Net;
 using FinTrack.Application.Utils;
 using FinTrack.Domain.Interfaces;
 using FinTrack.Resources;
 using FluentValidation;
 
-namespace FinTrack.Application.Security.CreateEditSecurity;
+namespace FinTrack.Application.Security.EntitiesBase;
 
-public sealed class CreateEditSecurityValidator: HasOwnerIdValidator<CreateEditSecurityRequest> 
+public class SecurityDetailsValidator<T>: ValidatorBase<T> where T : ISecurityDetails
 {
-    public CreateEditSecurityValidator(
+    protected SecurityDetailsValidator(
         ICountryRepository countryRepo,
         ICurrencyRepository currencyRepo,
         ISecurityRepository securityRepo
-    ) {
-        // Rules for Name
-        RuleFor(s => s.Name)
-            .NotEmpty()
-            .WithMessage(_ => GeneralMessages.EmptyNameError);
-
+    )
+    {
         // Rules for ISIN
         RuleFor(s => s.Isin)
             .Must((request) =>
             {
                 var isinAlgorithm = Algorithms.Isin;
-                return isinAlgorithm.Validate(request);
-            }).WithMessage(_ => SecurityMessages.IsinValueError);
-        
+                return isinAlgorithm.Validate(request!);
+            })
+            .When(s => s.Isin != null)
+            .WithMessage(_ => SecurityMessages.IsinValueError);
+
         RuleFor(s => s.Isin)
             .MustAsync(async (request, isin, _) =>
             {
                 return !await securityRepo
                     .Exists(s => s.Isin == isin && s.OwnerId == request.OwnerId);
-            }).WithMessage(_ => SecurityMessages.DuplicateIsinError);
+            })
+            .When(s => s.Isin != null)
+            .WithMessage(_ => SecurityMessages.DuplicateIsinError);
 
         // Rules for NativeCurrency
         RuleFor(s => s.NativeCurrency)
-            .NotEmpty()
-            .WithMessage(_ => GeneralMessages.EmptyCurrencyError);
-        
-        RuleFor(s => s.NativeCurrency)
-            .MustAsync(async (request, cancellation) =>
+            .MustAsync(async (request, _) =>
             {
                 return await currencyRepo.Exists(c => c.Id == request);
-            }).WithMessage(_ => GeneralMessages.InvalidCurrencyError);
-        
+            })
+            .When(s => s.NativeCurrency != default)
+            .WithMessage(_ => GeneralMessages.InvalidCurrencyError);
+
         // Rules for CounterpartyCountry
         RuleFor(s => s.CounterpartyCountry)
-            .MustAsync(async (request, cancellation) =>
+            .MustAsync(async (request, _) =>
             {
                 return await countryRepo.Exists(c => c.Id == request);
             })
-            .When(s => s.CounterpartyCountry != null)
-            .WithMessage(GeneralMessages.InvalidCountryError);
+            .When(s => s.CounterpartyCountry != default)
+            .WithMessage(_ => GeneralMessages.InvalidCountryError);
 
         // Rules for source country
-        RuleFor(s => s.SourceCountry)
-            .NotEmpty()
-            .WithMessage(_ => GeneralMessages.EmptyCountryError);
-        
         RuleFor(s => s.SourceCountry)
             .MustAsync(async (request, _) =>
             {
@@ -65,7 +59,7 @@ public sealed class CreateEditSecurityValidator: HasOwnerIdValidator<CreateEditS
             })
             .When(s => s.IssuingNIF == null)
             .WithMessage(_ => GeneralMessages.InvalidCountryError);
-        
+
         //Inter-property rules
         RuleFor(s => s.SourceCountry)
             .Empty()
@@ -74,15 +68,10 @@ public sealed class CreateEditSecurityValidator: HasOwnerIdValidator<CreateEditS
         RuleFor(s => s.IssuingNIF)
             .NotEmpty()
             .Must(IsValidNIF.Validate!)
-            .When(s => s.SourceCountry == null);
+            .When(s => s.SourceCountry == default);
 
         RuleFor(s => s.IssuingNIF)
             .Empty()
-            .Unless(s => s.SourceCountry == null);
-
-        // Rules for operations
-        RuleFor(s => s.Operations)
-            .Must(OperationOrderValidator.ValidateOperations)
-            .WithMessage(_ => SecurityMessages.InvalidOperationOrderError);
+            .Unless(s => s.SourceCountry == default);
     }
 }
